# pmbridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  changelog.md
examples/: mpbridge.conf  pmbridge.conf
src/: CMakeLists.txt  mbBuilder.cpp  mbBuilder.h  mbClient.cpp  mbClient.h  mbCommand.cpp  mbCommand.h  mbMemory.cpp  mbMemory.h  mbProject.cpp  mbProject.h  mbServer.cpp  mbServer.h  mb_config.h  mb_config.h.in  mb_core.cpp  mb_core.h  mb_help.cpp  mb_log.cpp  mb_log.h  mb_print.cpp  mb_print.h  mbridge.cpp  pmbBuilder.cpp  pmbBuilder.h  pmbClient.cpp  pmbClient.h  pmbCommand.cpp  pmbCommand.h  pmbMemory.cpp  pmbMemory.h  pmbProject.cpp  pmbProject.h  pmbServer.cpp  pmbServer.h  pmb_config.h.in  pmb_core.cpp  pmb_core.h  pmb_log.cpp  pmb_log.h  (+4 more)
src/core/: pmb_config.h  pmb_config.h.in  pmb_core.cpp  pmb_core.h  pmb_help.cpp  pmb_print.cpp  pmb_print.h
src/log/: pmbLogConsole.cpp  pmbLogConsole.h  pmb_log.cpp  pmb_log.h
src/project/: pmbBuilder.cpp  pmbBuilder.h  pmbClient.cpp  pmbClient.h  pmbCommand.cpp  pmbCommand.h  pmbProject.cpp  pmbProject.h  pmbServer.cpp  pmbServer.h
tests/: CMakeLists.txt  README.md  gtest_dependency.cmake  pmbMemory_test.cpp
tests/core/: pmb_core_test.cpp
tests/log/: pmbLogConsole_test.cpp  pmb_log_test.cpp
tests/project/: pmbBuilder_test.cpp  pmbClient_test.cpp  pmbCommand_test.cpp  pmbProject_test.cpp  pmbServer_test.cpp
